--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ endif()
 add_executable(TinyDIP main.cpp image_io.cpp)
 add_executable(bicubicInterpolationTest test/bicubicInterpolationTest.cpp image_io.cpp)
 add_executable(subimageTest test/subimageTest.cpp image_io.cpp)
+add_executable(subimage2Test test/subimage2Test.cpp image_io.cpp)
 add_executable(rgb2hsvTest test/rgb2hsvTest.cpp image_io.cpp)
 add_executable(increaseIntensityTest test/increaseIntensityTest.cpp image_io.cpp)
 add_executable(concatHorizontalTest test/concatHorizontalTest.cpp image_io.cpp)
