--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,7 +69,10 @@ add_executable(dct3Test test/dct3Test.cpp image_io.cpp)
 add_executable(idct3DetailTest test/idct3DetailTest.cpp image_io.cpp)
 add_executable(isIntegerTest test/isIntegerTest.cpp image_io.cpp)
 
-target_include_directories(TinyDIP PRIVATE ${LLVM_INCLUDE_DIRS})
+# target_include_directories
+if(APPLE)
+    target_include_directories(TinyDIP PRIVATE ${LLVM_INCLUDE_DIRS})
+endif()
 
 # Reference: https://stackoverflow.com/a/39600062/6667035
 target_link_libraries(TinyDIP -lm)
