--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,7 @@ add_executable(dct3DetailTest test/dct3DetailTest.cpp image_io.cpp)
 add_executable(dct3Test test/dct3Test.cpp image_io.cpp)
 add_executable(idct3DetailTest test/idct3DetailTest.cpp image_io.cpp)
 add_executable(isIntegerTest test/isIntegerTest.cpp image_io.cpp)
+add_executable(recursiveForeachTest test/recursiveForeachTest.cpp image_io.cpp)
 
 # target_include_directories
 if(APPLE)
