--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ add_executable(dct3Test test/dct3Test.cpp image_io.cpp)
 add_executable(idct3DetailTest test/idct3DetailTest.cpp image_io.cpp)
 add_executable(isIntegerTest test/isIntegerTest.cpp image_io.cpp)
 add_executable(recursiveForeachTest test/recursiveForeachTest.cpp image_io.cpp)
+add_executable(recursiveSizeTest test/recursiveSizeTest.cpp image_io.cpp)
 
 # target_include_directories
 if(APPLE)
