--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ add_executable(dct3Test test/dct3Test.cpp image_io.cpp)
 add_executable(idct3DetailTest test/idct3DetailTest.cpp image_io.cpp)
 add_executable(isIntegerTest test/isIntegerTest.cpp image_io.cpp)
 add_executable(pixelwiseOperationTest test/pixelwiseOperationTest.cpp image_io.cpp)
+add_executable(pixelwiseOperationParallelTest test/pixelwiseOperationParallelTest.cpp image_io.cpp)
 add_executable(recursiveForeachTest test/recursiveForeachTest.cpp image_io.cpp)
 add_executable(recursiveSizeTest test/recursiveSizeTest.cpp image_io.cpp)
 add_executable(dct2Test test/dct2Test.cpp image_io.cpp)
