--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,7 @@ add_executable(doubleImageIOTest test/doubleImageIOTest.cpp image_io.cpp)
 add_executable(manhattanDistanceTest test/manhattanDistanceTest.cpp image_io.cpp)
 add_executable(powTest test/powTest.cpp image_io.cpp)
 add_executable(powParallelTest test/powParallelTest.cpp image_io.cpp)
+add_executable(printDbmpFileTest test/printDbmpFileTest.cpp image_io.cpp)
 add_executable(subimageTest test/subimageTest.cpp image_io.cpp)
 add_executable(subimage2Test test/subimage2Test.cpp image_io.cpp)
 add_executable(rgb2hsvTest test/rgb2hsvTest.cpp image_io.cpp)
