--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,6 +78,7 @@ add_executable(dct2Test3 test/dct2Test3.cpp image_io.cpp)
 add_executable(doubleImageIOTest test/doubleImageIOTest.cpp image_io.cpp)
 add_executable(getNFromVariadicTemplatesTest test/getNFromVariadicTemplatesTest.cpp image_io.cpp)
 add_executable(manhattanDistanceTest test/manhattanDistanceTest.cpp image_io.cpp)
+add_executable(multipliesWithImageVectorsTest test/multipliesWithImageVectorsTest.cpp image_io.cpp)
 add_executable(powTest test/powTest.cpp image_io.cpp)
 add_executable(powParallelTest test/powParallelTest.cpp image_io.cpp)
 add_executable(printDbmpFileTest test/printDbmpFileTest.cpp image_io.cpp)
