--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,6 +100,7 @@ add_executable(pixelwiseOperationTest test/pixelwiseOperationTest.cpp image_io.c
 add_executable(pixelwiseOperationParallelTest test/pixelwiseOperationParallelTest.cpp image_io.cpp)
 add_executable(recursiveForeachTest test/recursiveForeachTest.cpp image_io.cpp)
 add_executable(recursiveSizeTest test/recursiveSizeTest.cpp image_io.cpp)
+add_executable(recursiveTransformTest test/recursiveTransformTest.cpp image_io.cpp)
 add_executable(idct2Test test/idct2Test.cpp image_io.cpp)
 
 # target_include_directories
