--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,6 +79,7 @@ add_executable(dct2Test2 test/dct2Test2.cpp image_io.cpp)
 add_executable(dct2Test3 test/dct2Test3.cpp image_io.cpp)
 add_executable(doubleImageIOTest test/doubleImageIOTest.cpp image_io.cpp)
 add_executable(dictionaryBasedNonLocalMeanTest test/dictionaryBasedNonLocalMeanTest.cpp image_io.cpp)
+add_executable()
 add_executable(getNFromVariadicTemplatesTest test/getNFromVariadicTemplatesTest.cpp image_io.cpp)
 add_executable(highlightRegionTest test/highlightRegionTest.cpp image_io.cpp)
 add_executable(manhattanDistanceTest test/manhattanDistanceTest.cpp image_io.cpp)
