--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,14 +74,20 @@ endif()
 add_executable(TinyDIP main.cpp image_io.cpp)
 add_executable(absTest test/absTest.cpp image_io.cpp)
 add_executable(bicubicInterpolationTest test/bicubicInterpolationTest.cpp image_io.cpp)
+add_executable(concatHorizontalTest test/concatHorizontalTest.cpp image_io.cpp)
+add_executable(concatVerticalTest test/concatVerticalTest.cpp image_io.cpp)
+add_executable(concatTest test/concatTest.cpp image_io.cpp)
 add_executable(dct2Test test/dct2Test.cpp image_io.cpp)
 add_executable(dct2Test2 test/dct2Test2.cpp image_io.cpp)
 add_executable(dct2Test3 test/dct2Test3.cpp image_io.cpp)
 add_executable(doubleImageIOTest test/doubleImageIOTest.cpp image_io.cpp)
 add_executable(dictionaryBasedNonLocalMeanTest test/dictionaryBasedNonLocalMeanTest.cpp image_io.cpp)
-add_executable()
+add_executable(gaussianFigure2DTest test/gaussianFigure2DTest.cpp image_io.cpp)
 add_executable(getNFromVariadicTemplatesTest test/getNFromVariadicTemplatesTest.cpp image_io.cpp)
 add_executable(highlightRegionTest test/highlightRegionTest.cpp image_io.cpp)
+add_executable(idct2Test test/idct2Test.cpp image_io.cpp)
+add_executable(increaseIntensityTest test/increaseIntensityTest.cpp image_io.cpp)
+add_executable(isIntegerTest test/isIntegerTest.cpp image_io.cpp)
 add_executable(manhattanDistanceTest test/manhattanDistanceTest.cpp image_io.cpp)
 add_executable(multipliesParallelTest test/multipliesParallelTest.cpp image_io.cpp)
 add_executable(multipliesWithImageVectorsTest test/multipliesWithImageVectorsTest.cpp image_io.cpp)
@@ -91,20 +97,14 @@ add_executable(printDbmpFileTest test/printDbmpFileTest.cpp image_io.cpp)
 add_executable(subimageTest test/subimageTest.cpp image_io.cpp)
 add_executable(subimage2Test test/subimage2Test.cpp image_io.cpp)
 add_executable(rgb2hsvTest test/rgb2hsvTest.cpp image_io.cpp)
-add_executable(increaseIntensityTest test/increaseIntensityTest.cpp image_io.cpp)
-add_executable(concatHorizontalTest test/concatHorizontalTest.cpp image_io.cpp)
-add_executable(concatVerticalTest test/concatVerticalTest.cpp image_io.cpp)
-add_executable(concatTest test/concatTest.cpp image_io.cpp)
 add_executable(dct3DetailTest test/dct3DetailTest.cpp image_io.cpp)
 add_executable(dct3Test test/dct3Test.cpp image_io.cpp)
 add_executable(idct3DetailTest test/idct3DetailTest.cpp image_io.cpp)
-add_executable(isIntegerTest test/isIntegerTest.cpp image_io.cpp)
 add_executable(pixelwiseOperationTest test/pixelwiseOperationTest.cpp image_io.cpp)
 add_executable(pixelwiseOperationParallelTest test/pixelwiseOperationParallelTest.cpp image_io.cpp)
 add_executable(recursiveForeachTest test/recursiveForeachTest.cpp image_io.cpp)
 add_executable(recursiveSizeTest test/recursiveSizeTest.cpp image_io.cpp)
 add_executable(recursiveTransformTest test/recursiveTransformTest.cpp image_io.cpp)
-add_executable(idct2Test test/idct2Test.cpp image_io.cpp)
 add_executable(recursiveFoldRightAllTest test/recursiveFoldRightAllTest.cpp image_io.cpp)
 
 # target_include_directories
