--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,7 @@ add_executable(isIntegerTest test/isIntegerTest.cpp image_io.cpp)
 add_executable(manhattanDistanceTest test/manhattanDistanceTest.cpp image_io.cpp)
 add_executable(multipliesParallelTest test/multipliesParallelTest.cpp image_io.cpp)
 add_executable(multipliesWithImageVectorsTest test/multipliesWithImageVectorsTest.cpp image_io.cpp)
+add_executable(paste2DTest test/paste2DTest.cpp image_io.cpp)
 add_executable(plusTest test/plusTest.cpp image_io.cpp)
 add_executable(powTest test/powTest.cpp image_io.cpp)
 add_executable(powParallelTest test/powParallelTest.cpp image_io.cpp)
