--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,7 +100,7 @@ add_executable(dct3DetailTest test/dct3DetailTest.cpp image_io.cpp)
 add_executable(dct3Test test/dct3Test.cpp image_io.cpp)
 add_executable(idct3DetailTest test/idct3DetailTest.cpp image_io.cpp)
 add_executable(pixelwiseOperationTest test/pixelwiseOperationTest.cpp image_io.cpp)
-add_executable(pixelwiseOperationParallelTest test/pixelwiseOperationParallelTest.cpp image_io.cpp)
+#add_executable(pixelwiseOperationParallelTest test/pixelwiseOperationParallelTest.cpp image_io.cpp)
 add_executable(recursiveAllOfTest test/recursiveAllOfTest.cpp image_io.cpp)
 add_executable(recursiveAnyOfTest test/recursiveAnyOfTest.cpp image_io.cpp)
 add_executable(recursiveFindIfTest test/recursiveFindIfTest.cpp image_io.cpp)
