--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,7 @@ add_executable(doubleImageIOTest test/doubleImageIOTest.cpp image_io.cpp)
 add_executable(gaussianFigure2DTest test/gaussianFigure2DTest.cpp image_io.cpp)
 add_executable(getNFromVariadicTemplatesTest test/getNFromVariadicTemplatesTest.cpp image_io.cpp)
 add_executable(highlightRegionTest test/highlightRegionTest.cpp image_io.cpp)
+add_executable(histogramTest test/histogramTest.cpp image_io.cpp)
 add_executable(idct2Test test/idct2Test.cpp image_io.cpp)
 add_executable(imgaussfiltTest test/imgaussfiltTest.cpp image_io.cpp)
 add_executable(increaseIntensityTest test/increaseIntensityTest.cpp image_io.cpp)
