--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,6 +92,7 @@ add_executable(isIntegerTest test/isIntegerTest.cpp image_io.cpp)
 add_executable(manhattanDistanceTest test/manhattanDistanceTest.cpp image_io.cpp)
 add_executable(multipliesParallelTest test/multipliesParallelTest.cpp image_io.cpp)
 add_executable(multipliesWithImageVectorsTest test/multipliesWithImageVectorsTest.cpp image_io.cpp)
+add_executable(otsuThresholdTest otsuThresholdTest.cpp image_io.cpp)
 add_executable(paste2DTest test/paste2DTest.cpp image_io.cpp)
 add_executable(plusTest test/plusTest.cpp image_io.cpp)
 add_executable(powTest test/powTest.cpp image_io.cpp)
@@ -143,6 +144,7 @@ target_link_libraries(TinyDIP -lm)
 target_link_libraries(TinyDIP -lpthread)
 target_link_libraries(TinyDIP tbb)
 target_link_libraries(histogramTest tbb)
+target_link_libraries(otsuThresholdTest tbb)
 if(APPLE)
     # Remove '-Xclang' from global flags
     string(REPLACE "-Xclang" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
