--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,6 +101,7 @@ add_executable(printDbmpFileTest test/printDbmpFileTest.cpp image_io.cpp)
 add_executable(subimageTest test/subimageTest.cpp image_io.cpp)
 add_executable(subimage2Test test/subimage2Test.cpp image_io.cpp)
 add_executable(rgb2hsvTest test/rgb2hsvTest.cpp image_io.cpp)
+add_executable(randFunctionTest test/randFunctionTest.cpp image_io.cpp)
 add_executable(dct3DetailTest test/dct3DetailTest.cpp image_io.cpp)
 add_executable(dct3Test test/dct3Test.cpp image_io.cpp)
 add_executable(idct3DetailTest test/idct3DetailTest.cpp image_io.cpp)
@@ -145,6 +146,7 @@ target_link_libraries(TinyDIP -lpthread)
 target_link_libraries(TinyDIP tbb)
 target_link_libraries(histogramTest tbb)
 target_link_libraries(otsuThresholdTest tbb)
+target_link_libraries(randFunctionTest tbb)
 if(APPLE)
     # Remove '-Xclang' from global flags
     string(REPLACE "-Xclang" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
