--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,6 +107,7 @@ add_executable(dct3Test test/dct3Test.cpp image_io.cpp)
 add_executable(idct3DetailTest test/idct3DetailTest.cpp image_io.cpp)
 add_executable(pixelwiseOperationTest test/pixelwiseOperationTest.cpp image_io.cpp)
 #add_executable(pixelwiseOperationParallelTest test/pixelwiseOperationParallelTest.cpp image_io.cpp)
+add_executable(rainDictionaryAnalysis test/rainDictionaryAnalysis.cpp image_io.cpp)
 add_executable(recursiveAllOfTest test/recursiveAllOfTest.cpp image_io.cpp)
 add_executable(recursiveAnyOfTest test/recursiveAnyOfTest.cpp image_io.cpp)
 add_executable(recursiveFindIfTest test/recursiveFindIfTest.cpp image_io.cpp)
@@ -146,6 +147,7 @@ target_link_libraries(TinyDIP -lpthread)
 target_link_libraries(TinyDIP tbb)
 target_link_libraries(histogramTest tbb)
 target_link_libraries(otsuThresholdTest tbb)
+target_link_libraries(rainDictionaryAnalysis tbb)
 target_link_libraries(randFunctionTest tbb)
 if(APPLE)
     # Remove '-Xclang' from global flags
