--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -144,11 +144,14 @@ endif()
 target_link_libraries(TinyDIP -lm)
 #target_link_libraries(TinyDIP -lomp)
 target_link_libraries(TinyDIP -lpthread)
-target_link_libraries(TinyDIP tbb)
-target_link_libraries(histogramTest tbb)
-target_link_libraries(otsuThresholdTest tbb)
-target_link_libraries(rainDictionaryAnalysis tbb)
-target_link_libraries(randFunctionTest tbb)
+if(NOT APPLE)
+    target_link_libraries(TinyDIP tbb)
+    target_link_libraries(histogramTest tbb)
+    target_link_libraries(otsuThresholdTest tbb)
+    target_link_libraries(rainDictionaryAnalysis tbb)
+    target_link_libraries(randFunctionTest tbb)
+endif()
+
 if(APPLE)
     # Remove '-Xclang' from global flags
     string(REPLACE "-Xclang" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
