--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,6 +81,7 @@ add_executable(dct2Test4 test/dct2Test4.cpp image_io.cpp)
 add_executable(dft2Test test/dft2Test.cpp image_io.cpp)
 add_executable(differenceOfGaussianTest test/differenceOfGaussianTest.cpp image_io.cpp)
 add_executable(doubleImageIOTest test/doubleImageIOTest.cpp image_io.cpp)
+#add_executable(dictionaryBasedNonLocalMeanTest test/dictionaryBasedNonLocalMeanTest.cpp image_io.cpp)
 add_executable(gaussianFigure2DTest test/gaussianFigure2DTest.cpp image_io.cpp)
 add_executable(getNFromVariadicTemplatesTest test/getNFromVariadicTemplatesTest.cpp image_io.cpp)
 add_executable(highlightRegionTest test/highlightRegionTest.cpp image_io.cpp)
@@ -113,6 +114,7 @@ add_executable(recursiveAnyOfTest test/recursiveAnyOfTest.cpp image_io.cpp)
 add_executable(recursiveFindIfTest test/recursiveFindIfTest.cpp image_io.cpp)
 add_executable(recursiveFoldRightAllTest test/recursiveFoldRightAllTest.cpp image_io.cpp)
 add_executable(recursiveForeachTest test/recursiveForeachTest.cpp image_io.cpp)
+add_executable(recursiveMinmaxTest test/recursiveMinmaxTest.cpp image_io.cpp)
 add_executable(recursiveNoneOfTest test/recursiveNoneOfTest.cpp image_io.cpp)
 add_executable(recursiveReduceTest test/recursiveReduceTest.cpp image_io.cpp)
 add_executable(recursiveRemoveCopyTest test/recursiveRemoveCopyTest.cpp image_io.cpp)
@@ -150,6 +152,7 @@ if(NOT APPLE)
     target_link_libraries(otsuThresholdTest tbb)
     target_link_libraries(rainDictionaryAnalysis tbb)
     target_link_libraries(randFunctionTest tbb)
+    target_link_libraries(recursiveMinmaxTest tbb)
 endif()
 
 if(APPLE)
