--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,7 @@ add_executable(concatTest test/concatTest.cpp image_io.cpp)
 add_executable(conv2Test test/conv2Test.cpp image_io.cpp)
 add_executable(conv2Test2 test/conv2Test2.cpp image_io.cpp)
 add_executable(convnTest test/convnTest.cpp image_io.cpp)
+add_executable(DiamondWheelAnalysis test/DiamondWheelAnalysis.cpp image_io.cpp)
 add_executable(dct2Test test/dct2Test.cpp image_io.cpp)
 add_executable(dct2Test2 test/dct2Test2.cpp image_io.cpp)
 add_executable(dct2Test3 test/dct2Test3.cpp image_io.cpp)
@@ -148,6 +149,7 @@ target_link_libraries(TinyDIP -lm)
 target_link_libraries(TinyDIP -lpthread)
 if(NOT APPLE)
     target_link_libraries(TinyDIP tbb)
+    target_link_libraries(DiamondWheelAnalysis tbb)
     target_link_libraries(histogramTest tbb)
     target_link_libraries(otsuThresholdTest tbb)
     target_link_libraries(rainDictionaryAnalysis tbb)
