--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ add_executable(TinyDIP main.cpp image_io.cpp)
 add_executable(absTest test/absTest.cpp image_io.cpp)
 add_executable(allOfTest test/allOfTest.cpp image_io.cpp)
 add_executable(bicubicInterpolationTest test/bicubicInterpolationTest.cpp image_io.cpp)
+add_executable(bilateralFilterTest test/bilateralFilterTest.cpp image_io.cpp)
 add_executable(concatHorizontalTest test/concatHorizontalTest.cpp image_io.cpp)
 add_executable(concatVerticalTest test/concatVerticalTest.cpp image_io.cpp)
 add_executable(concatTest test/concatTest.cpp image_io.cpp)
@@ -149,6 +150,7 @@ target_link_libraries(TinyDIP -lm)
 target_link_libraries(TinyDIP -lpthread)
 if(NOT APPLE)
     target_link_libraries(TinyDIP tbb)
+    target_link_libraries(bilateralFilterTest tbb)
     target_link_libraries(DiamondWheelAnalysis tbb)
     target_link_libraries(histogramTest tbb)
     target_link_libraries(otsuThresholdTest tbb)
