--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,6 +155,7 @@ if(NOT APPLE)
     target_link_libraries(bilateralFilterTest tbb)
     target_link_libraries(DiamondWheelAnalysis tbb)
     target_link_libraries(histogramTest tbb)
+    target_link_libraries(imgaussfiltTest tbb)
     target_link_libraries(otsuThresholdTest tbb)
     target_link_libraries(rainDictionaryAnalysis tbb)
     target_link_libraries(randFunctionTest tbb)
