--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,6 +92,7 @@ add_executable(idct2Test test/idct2Test.cpp image_io.cpp)
 add_executable(imgaussfiltTest test/imgaussfiltTest.cpp image_io.cpp)
 add_executable(increaseIntensityTest test/increaseIntensityTest.cpp image_io.cpp)
 add_executable(isIntegerTest test/isIntegerTest.cpp image_io.cpp)
+add_executable(lanczosResamplingTest test/lanczosResamplingTest.cpp image_io.cpp)
 add_executable(manhattanDistanceTest test/manhattanDistanceTest.cpp image_io.cpp)
 add_executable(multipliesParallelTest test/multipliesParallelTest.cpp image_io.cpp)
 add_executable(multipliesWithImageVectorsTest test/multipliesWithImageVectorsTest.cpp image_io.cpp)
