--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,6 +157,7 @@ if(NOT APPLE)
     target_link_libraries(DiamondWheelAnalysis tbb)
     target_link_libraries(histogramTest tbb)
     target_link_libraries(imgaussfiltTest tbb)
+    target_link_libraries(lanczosResamplingTest tbb)
     target_link_libraries(otsuThresholdTest tbb)
     target_link_libraries(rainDictionaryAnalysis tbb)
     target_link_libraries(randFunctionTest tbb)
