--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -151,19 +151,20 @@ endif()
 target_link_libraries(TinyDIP -lm)
 #target_link_libraries(TinyDIP -lomp)
 target_link_libraries(TinyDIP -lpthread)
-if(NOT APPLE)
-    target_link_libraries(TinyDIP tbb)
-    target_link_libraries(bilateralFilterTest tbb)
-    target_link_libraries(DiamondWheelAnalysis tbb)
-    target_link_libraries(histogramTest tbb)
-    target_link_libraries(imgaussfiltTest tbb)
-    target_link_libraries(lanczosResamplingTest tbb)
-    target_link_libraries(otsuThresholdTest tbb)
-    target_link_libraries(rainDictionaryAnalysis tbb)
-    target_link_libraries(randFunctionTest tbb)
-    target_link_libraries(recursiveMinmaxTest tbb)
-    target_link_libraries(windowedFilterTest tbb)
-endif()
+target_link_libraries(TinyDIP tbb)
+target_link_libraries(absTest tbb)
+target_link_libraries(allOfTest tbb)
+target_link_libraries(bicubicInterpolationTest tbb)
+target_link_libraries(bilateralFilterTest tbb)
+target_link_libraries(DiamondWheelAnalysis tbb)
+target_link_libraries(histogramTest tbb)
+target_link_libraries(imgaussfiltTest tbb)
+target_link_libraries(lanczosResamplingTest tbb)
+target_link_libraries(otsuThresholdTest tbb)
+target_link_libraries(rainDictionaryAnalysis tbb)
+target_link_libraries(randFunctionTest tbb)
+target_link_libraries(recursiveMinmaxTest tbb)
+target_link_libraries(windowedFilterTest tbb)
 
 if(APPLE)
     # Remove '-Xclang' from global flags
