--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -163,20 +163,20 @@ endif()
 target_link_libraries(TinyDIP -lm)
 #target_link_libraries(TinyDIP -lomp)
 target_link_libraries(TinyDIP -lpthread)
-target_link_libraries(TinyDIP tbb)
-target_link_libraries(absTest tbb)
-target_link_libraries(allOfTest tbb)
-target_link_libraries(bicubicInterpolationTest tbb)
-target_link_libraries(bilateralFilterTest tbb)
+target_link_libraries(TinyDIP PUBLIC TBB::tbb)
+target_link_libraries(absTest PUBLIC TBB::tbb)
+target_link_libraries(allOfTest PUBLIC TBB::tbb)
+target_link_libraries(bicubicInterpolationTest PUBLIC TBB::tbb)
+target_link_libraries(bilateralFilterTest PUBLIC TBB::tbb)
 target_link_libraries(DiamondWheelAnalysis PUBLIC TBB::tbb)
-target_link_libraries(histogramTest tbb)
-target_link_libraries(imgaussfiltTest tbb)
-target_link_libraries(lanczosResamplingTest tbb)
-target_link_libraries(otsuThresholdTest tbb)
-target_link_libraries(rainDictionaryAnalysis tbb)
-target_link_libraries(randFunctionTest tbb)
-target_link_libraries(recursiveMinmaxTest tbb)
-target_link_libraries(windowedFilterTest tbb)
+target_link_libraries(histogramTest PUBLIC TBB::tbb)
+target_link_libraries(imgaussfiltTest PUBLIC TBB::tbb)
+target_link_libraries(lanczosResamplingTest PUBLIC TBB::tbb)
+target_link_libraries(otsuThresholdTest PUBLIC TBB::tbb)
+target_link_libraries(rainDictionaryAnalysis PUBLIC TBB::tbb)
+target_link_libraries(randFunctionTest PUBLIC TBB::tbb)
+target_link_libraries(recursiveMinmaxTest PUBLIC TBB::tbb)
+target_link_libraries(windowedFilterTest PUBLIC TBB::tbb)
 
 if(APPLE)
     # Remove '-Xclang' from global flags
