--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -163,7 +163,7 @@ endif()
 target_link_libraries(TinyDIP -lm)
 #target_link_libraries(TinyDIP -lomp)
 target_link_libraries(TinyDIP -lpthread)
-target_link_libraries(TinyDIP PUBLIC TBB::tbb)
+target_link_libraries(TinyDIP tbb)
 target_link_libraries(absTest PUBLIC TBB::tbb)
 target_link_libraries(allOfTest PUBLIC TBB::tbb)
 target_link_libraries(bicubicInterpolationTest PUBLIC TBB::tbb)
