--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,6 +105,7 @@ add_executable(imgaussfiltTest test/imgaussfiltTest.cpp image_io.cpp)
 add_executable(increaseIntensityTest test/increaseIntensityTest.cpp image_io.cpp)
 add_executable(isIntegerTest test/isIntegerTest.cpp image_io.cpp)
 add_executable(lanczosResamplingTest test/lanczosResamplingTest.cpp image_io.cpp)
+add_executable(mandelbrotFractalGeneratorTest test/mandelbrotFractalGeneratorTest.cpp image_io.cpp)
 add_executable(manhattanDistanceTest test/manhattanDistanceTest.cpp image_io.cpp)
 add_executable(multipliesParallelTest test/multipliesParallelTest.cpp image_io.cpp)
 add_executable(multipliesWithImageVectorsTest test/multipliesWithImageVectorsTest.cpp image_io.cpp)
@@ -172,6 +173,8 @@ target_link_libraries(DiamondWheelAnalysis PUBLIC TBB::tbb)
 target_link_libraries(histogramTest PUBLIC TBB::tbb)
 target_link_libraries(imgaussfiltTest PUBLIC TBB::tbb)
 target_link_libraries(lanczosResamplingTest PUBLIC TBB::tbb)
+target_link_libraries(mandelbrotFractalGeneratorTest PUBLIC TBB::tbb)
+target_link_libraries(manhattanDistanceTest PUBLIC TBB::tbb)
 target_link_libraries(otsuThresholdTest PUBLIC TBB::tbb)
 target_link_libraries(rainDictionaryAnalysis PUBLIC TBB::tbb)
 target_link_libraries(randFunctionTest PUBLIC TBB::tbb)
