--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,6 +104,7 @@ add_executable(idct2Test test/idct2Test.cpp image_io.cpp)
 add_executable(imgaussfiltTest test/imgaussfiltTest.cpp image_io.cpp)
 add_executable(increaseIntensityTest test/increaseIntensityTest.cpp image_io.cpp)
 add_executable(isIntegerTest test/isIntegerTest.cpp image_io.cpp)
+add_executable(juliaFractalGeneratorTest test/julaFractalGeneratorTest.cpp image_io.cpp)
 add_executable(lanczosResamplingTest test/lanczosResamplingTest.cpp image_io.cpp)
 add_executable(mandelbrotFractalGeneratorTest test/mandelbrotFractalGeneratorTest.cpp image_io.cpp)
 add_executable(manhattanDistanceTest test/manhattanDistanceTest.cpp image_io.cpp)
@@ -172,6 +173,7 @@ target_link_libraries(bilateralFilterTest PUBLIC TBB::tbb)
 target_link_libraries(DiamondWheelAnalysis PUBLIC TBB::tbb)
 target_link_libraries(histogramTest PUBLIC TBB::tbb)
 target_link_libraries(imgaussfiltTest PUBLIC TBB::tbb)
+target_link_libraries(juliaFractalGeneratorTest PUBLIC TBB::tbb)
 target_link_libraries(lanczosResamplingTest PUBLIC TBB::tbb)
 target_link_libraries(mandelbrotFractalGeneratorTest PUBLIC TBB::tbb)
 target_link_libraries(manhattanDistanceTest PUBLIC TBB::tbb)
