--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,6 +112,7 @@ add_executable(multipliesParallelTest test/multipliesParallelTest.cpp image_io.c
 add_executable(multipliesWithImageVectorsTest test/multipliesWithImageVectorsTest.cpp image_io.cpp)
 add_executable(otsuThresholdTest test/otsuThresholdTest.cpp image_io.cpp)
 add_executable(paste2DTest test/paste2DTest.cpp image_io.cpp)
+add_executable(phoenixFractalGeneratorTest test/phoenixFractalGeneratorTest.cpp image_io.cpp)
 add_executable(plusTest test/plusTest.cpp image_io.cpp)
 add_executable(powTest test/powTest.cpp image_io.cpp)
 #add_executable(powParallelTest test/powParallelTest.cpp image_io.cpp)
@@ -178,6 +179,7 @@ target_link_libraries(lanczosResamplingTest PUBLIC TBB::tbb)
 target_link_libraries(mandelbrotFractalGeneratorTest PUBLIC TBB::tbb)
 target_link_libraries(manhattanDistanceTest PUBLIC TBB::tbb)
 target_link_libraries(otsuThresholdTest PUBLIC TBB::tbb)
+target_link_libraries(phoenixFractalGeneratorTest PUBLIC TBB::tbb)
 target_link_libraries(rainDictionaryAnalysis PUBLIC TBB::tbb)
 target_link_libraries(randFunctionTest PUBLIC TBB::tbb)
 target_link_libraries(recursiveMinmaxTest PUBLIC TBB::tbb)
