--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,6 +140,7 @@ add_executable(recursiveRemoveCopyIfTest test/recursiveRemoveCopyIfTest.cpp imag
 add_executable(recursiveSizeTest test/recursiveSizeTest.cpp image_io.cpp)
 #add_executable(recursiveTransformTest test/recursiveTransformTest.cpp image_io.cpp)
 #add_executable(recursiveTransformReduceTest test/recursiveTransformReduceTest.cpp image_io.cpp)
+add_executable(stitchingTest test/stitchingTest.cpp image_io.cpp)
 #add_executable(sumTest test/sumTest.cpp image_io.cpp)
 add_executable(transposeTest test/transposeTest.cpp image_io.cpp)
 add_executable(windowedFilterTest test/windowedFilterTest.cpp image_io.cpp)
@@ -183,6 +184,7 @@ target_link_libraries(phoenixFractalGeneratorTest PUBLIC TBB::tbb)
 target_link_libraries(rainDictionaryAnalysis PUBLIC TBB::tbb)
 target_link_libraries(randFunctionTest PUBLIC TBB::tbb)
 target_link_libraries(recursiveMinmaxTest PUBLIC TBB::tbb)
+target_link_libraries(stitchingTest PUBLIC TBB::tbb)
 target_link_libraries(windowedFilterTest PUBLIC TBB::tbb)
 
 if(APPLE)
