--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -174,6 +174,7 @@ target_link_libraries(bicubicInterpolationTest PUBLIC TBB::tbb)
 target_link_libraries(bilateralFilterTest PUBLIC TBB::tbb)
 target_link_libraries(concatHorizontalTest PUBLIC TBB::tbb)
 target_link_libraries(dct2Test PUBLIC TBB::tbb)
+target_link_libraries(dct2Test4 PUBLIC TBB::tbb)
 target_link_libraries(DiamondWheelAnalysis PUBLIC TBB::tbb)
 target_link_libraries(histogramTest PUBLIC TBB::tbb)
 target_link_libraries(imgaussfiltTest PUBLIC TBB::tbb)
