--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -175,7 +175,9 @@ target_link_libraries(bilateralFilterTest PUBLIC TBB::tbb)
 target_link_libraries(concatHorizontalTest PUBLIC TBB::tbb)
 target_link_libraries(concatTest PUBLIC TBB::tbb)
 target_link_libraries(concatVerticalTest PUBLIC TBB::tbb)
+target_link_libraries(conv2Test PUBLIC TBB::tbb)
 target_link_libraries(conv2Test2 PUBLIC TBB::tbb)
+target_link_libraries(convnTest PUBLIC TBB::tbb)
 target_link_libraries(dct2Test PUBLIC TBB::tbb)
 target_link_libraries(dct2Test2 PUBLIC TBB::tbb)
 target_link_libraries(dct2Test3 PUBLIC TBB::tbb)
